--- a/Workshops/Workshop 2/eeg-data-analysis.ipynb
+++ b/Workshops/Workshop 2/eeg-data-analysis.ipynb
@@ -58,7 +58,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting plotly\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/f7/05/3c32c6bc85acbd30a18fbc3ba732fed5e48e5f8fd60d2a148877970f4a61/plotly-4.2.1-py2.py3-none-any.whl (7.2MB)\n",
+      "\u001b[K     |████████████████████████████████| 7.2MB 4.7MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting retrying>=1.3.3 (from plotly)\n",
+      "  Downloading https://files.pythonhosted.org/packages/44/ef/beae4b4ef80902f22e3af073397f079c96969c69b2c7d52a57ea9ae61c9d/retrying-1.3.3.tar.gz\n",
+      "Requirement already satisfied: six in /Users/SaarangP/anaconda3/lib/python3.7/site-packages (from plotly) (1.12.0)\n",
+      "Building wheels for collected packages: retrying\n",
+      "  Building wheel for retrying (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /Users/SaarangP/Library/Caches/pip/wheels/d7/a9/33/acc7b709e2a35caa7d4cae442f6fe6fbf2c43f80823d46460c\n",
+      "Successfully built retrying\n",
+      "Installing collected packages: retrying, plotly\n",
+      "Successfully installed plotly-4.2.1 retrying-1.3.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install plotly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
@@ -109,27 +137,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Please download the data from [EEG-Alcohol](https://www.kaggle.com/nnair25/Alcoholics) and put it into this directory"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "_kg_hide-input": true,
     "_uuid": "6d213deb9d06151db70b9975bcc2bb6fa78bffc9"
    },
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../input/SMNI_CMI_TRAIN/'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-a9e92ef03979>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Total amount of files in SMNI_CMI_TRAIN directory: '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'../input/SMNI_CMI_TRAIN/'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../input/SMNI_CMI_TRAIN/'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total amount of files in SMNI_CMI_TRAIN directory: 469\n"
      ]
     }
    ],
    "source": [
-    "print('Total amount of files in SMNI_CMI_TRAIN directory: ' + str(len(os.listdir('../input/SMNI_CMI_TRAIN/'))))"
+    "print('Total amount of files in SMNI_CMI_TRAIN directory: ' + str(len(os.listdir('../Workshop 2/SMNI_CMI_TRAIN/'))))"
    ]
   },
   {
@@ -138,13 +169,21 @@
    "metadata": {
     "_uuid": "78519635c2217182f4c8e13bc25876631eb8f8a6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 35%|███▍      | 163/469 [02:28<17:19,  3.40s/it]"
+     ]
+    }
+   ],
    "source": [
-    "filenames_list = os.listdir('../input/SMNI_CMI_TRAIN/') ## list of file names in the directory\n",
+    "filenames_list = os.listdir('../Workshop 2/SMNI_CMI_TRAIN/') ## list of file names in the directory\n",
     "EEG_data = pd.DataFrame({}) ## create an empty df that will hold data from each file\n",
     "\n",
     "for file_name in tqdm(filenames_list):\n",
-    "    temp_df = pd.read_csv('../input/SMNI_CMI_TRAIN/' + file_name) ## read from the file to df\n",
+    "    temp_df = pd.read_csv('../Workshop 2/SMNI_CMI_TRAIN/' + file_name) ## read from the file to df\n",
     "    EEG_data = EEG_data.append(temp_df) ## add the file data to the main df\n",
     "    \n",
     "EEG_data = EEG_data.drop(['Unnamed: 0'], axis=1) ## remove the unused column\n",
@@ -1012,7 +1051,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
