Added descriptions for models

--- a/Workshops/Workshop 3/notebooks/W3 Model Creation.ipynb
+++ b/Workshops/Workshop 3/notebooks/W3 Model Creation.ipynb
@@ -328,17 +328,25 @@
     "\n",
     "### Basics:\n",
     "[Covariance](https://www.youtube.com/watch?v=KDw3hC2YNFc)<br/>\n",
+    "Covariance is a measure of the joint variability of two random variables. ie. How two variables influence each other in a distribution. <br/>\n",
     "[Linear Regression](https://www.youtube.com/watch?v=zPG4NjIkCjc)<br/>\n",
+    "Linear regression is a binary regression algorithm which classifies a dataset with either a 0 or 1 value. <br/>\n",
     "[Logistic Regression](https://www.youtube.com/watch?v=yIYKR4sgzI8)<br/>\n",
+    "Logistic regression is a binary regression algorithm and it predicts a continuous outcome: the probability of an event. Logistic regression is a type of generalized linear regression model.<br/>\n",
     "[Support Vector Machine (SVM)](https://www.youtube.com/watch?v=1NxnPkZM9bc)<br/>\n",
+    "A Support Vector Machine (SVM) is a discriminative classifier formally defined by a separating hyperplane. In other words, given labeled training data (supervised learning), the algorithm outputs an optimal hyperplane which categorizes new examples.\n",
     "\n",
     "### EEG Models\n",
     "[Click Here for Super Useful Models!](https://github.com/alexandrebarachant/pyRiemann) <br/>\n",
     "[Riemannian Geometry](https://www.youtube.com/watch?v=IPrNIjA4AWE)<br/>\n",
+    "Takes into consideration various geometric models to classify data. Think of it as creating a sphere, saddle, or simple plane. <br/>\n",
     "[Vectorization & Logistic Regression](https://www.youtube.com/watch?v=okpqeEUdEkY)<br/>\n",
+    "Vectorization is the process of rewriting a loop so that instead of processing a single element of an array N times, it processes (say) 4 elements of the array simultaneously N/4 times. <br/>\n",
     "[Vectorization & Regularized LDA](https://www.youtube.com/watch?v=azXCzI57Yfc)<br/>\n",
+    "LDA allows for ‘fuzzy’ memberships. This provides a more nuanced way of recommending similar items, finding duplicates, or discovering user profiles/personas. In contrast k-means makes hard decision boundaries.\n",
     "[ERP Covariance & Tangent Space Mapping](https://www.youtube.com/watch?v=tJHC2FVfhjA)<br/>\n",
-    "[ERP Covariance & MDM]()<br/>"
+    "[ERP Covariance & MDM]()<br/>\n",
+    "A specific type of geometric classifier. <br/>"
    ]
   },
   {
