--- a/Workshops/Workshop 3/notebooks/W3 Model Creation.ipynb
+++ b/Workshops/Workshop 3/notebooks/W3 Model Creation.ipynb
@@ -9,9 +9,9 @@
     "\n",
     "\n",
     "### Hello! Welcome to a workshop on data modeling. Here is the agenda for today:\n",
-    " - Catchup & Modeling basics\n",
-    " - Learn how to model EEG data\n",
-    " - Practice with your own data!!"
+    " - Kaggle Introduction to Modeling & Review\n",
+    " - Modeling basics\n",
+    " - Learn how to model EEG data"
    ]
   },
   {
@@ -24,6 +24,52 @@
     "\n",
     "### Since all of us are at different levels of understanding, let's do a quick catchup assignment\n",
     "https://www.kaggle.com/learn/intro-to-machine-learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Types of Models\n",
+    "\n",
+    "### Basics:\n",
+    "[Covariance](https://www.youtube.com/watch?v=KDw3hC2YNFc)<br/>\n",
+    "Covariance is a measure of the joint variability of two random variables. ie. How two variables influence each other in a distribution. \n",
+    "<img style=\"height: 200px;\" src=\"images/covariance.png\"/>\n",
+    "<br/>\n",
+    "[Linear Regression](https://www.youtube.com/watch?v=zPG4NjIkCjc)<br/>\n",
+    "Linear regression is a binary regression algorithm which classifies a dataset with either a 0 or 1 value. \n",
+    "<img style=\"height: 200px;\" src=\"images/lin_reg.png\"/><br/>\n",
+    "[Logistic Regression](https://www.youtube.com/watch?v=yIYKR4sgzI8)<br/>\n",
+    "Logistic regression is a binary regression algorithm and it predicts a continuous outcome: the probability of an event. Logistic regression is a type of generalized linear regression model.\n",
+    "<img style=\"height: 300px;\" src=\"images/log_reg.jpg\"/><br/>\n",
+    "[Support Vector Machine (SVM)](https://www.youtube.com/watch?v=1NxnPkZM9bc)<br/>\n",
+    "A Support Vector Machine (SVM) is a discriminative classifier formally defined by a separating hyperplane. In other words, given labeled training data (supervised learning), the algorithm outputs an optimal hyperplane which categorizes new examples. The goal with SVM is to maximize its margin.\n",
+    "<img style=\"height: 300px;\" src=\"images/svm.png\"/>\n",
+    "\n",
+    "### EEG Models\n",
+    "[Riemannian Geometry](https://www.youtube.com/watch?v=IPrNIjA4AWE)<br/>\n",
+    "Takes into consideration various geometric models to classify data. Think of it as creating a sphere, saddle, or simple plane. <br/><br/>\n",
+    "[Vectorization & Logistic Regression](https://www.youtube.com/watch?v=okpqeEUdEkY)<br/>\n",
+    "Vectorization is the process of rewriting a loop so that instead of processing a single element of an array N times, it processes (say) 4 elements of the array simultaneously N/4 times. <br/><br/>\n",
+    "[Vectorization & Regularized LDA](https://www.youtube.com/watch?v=azXCzI57Yfc)<br/>\n",
+    "LDA allows for ‘fuzzy’ memberships. This provides a more nuanced way of recommending similar items, finding duplicates, or discovering user profiles/personas. In contrast k-means makes hard decision boundaries. <br/><br/>\n",
+    "[ERP Covariance & Tangent Space Mapping](https://www.youtube.com/watch?v=tJHC2FVfhjA)<br/>\n",
+    "Mapping a curved plane to a tangent 2D plane as a form of dimensonality reduction.<br/><br/>\n",
+    "[ERP Covariance & MDM](https://books.google.com/books?hl=en&lr=&id=AzegJt1HmpQC&oi=fnd&pg=PR17&dq=MDM+classification+model&ots=kmh3QD4bxq&sig=MCYHrSOLoGmlTUYhrybZ3UaCAWk#v=onepage&q=MDM%20classification%20model&f=false)<br/>\n",
+    "A specific type of geometric classifier. <br/><br/>\n",
+    "You can find all of these models implemented at the end of this notebook. Click below to access a github repo with a bunch of useful models for EEG: <br/>\n",
+    "[Pyriemann](https://github.com/alexandrebarachant/pyRiemann) <br/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fitting your Model\n",
+    "Overfitting - Your model is collects too many features and becomes overly good at classfying your training data. When it comes to your validation set (testing data) it performs poorly.  <br/>\n",
+    "Underfitting - Your model is not able to classify its testing/training data well because it doesn't have enough features.\n",
+    "<img style=\"height: 300px;\" src=\"fitting.png\"/>"
    ]
   },
   {
@@ -324,36 +370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Let's watch some videos on Models!\n",
-    "\n",
-    "### Basics:\n",
-    "[Covariance](https://www.youtube.com/watch?v=KDw3hC2YNFc)<br/>\n",
-    "Covariance is a measure of the joint variability of two random variables. ie. How two variables influence each other in a distribution. <br/>\n",
-    "[Linear Regression](https://www.youtube.com/watch?v=zPG4NjIkCjc)<br/>\n",
-    "Linear regression is a binary regression algorithm which classifies a dataset with either a 0 or 1 value. <br/>\n",
-    "[Logistic Regression](https://www.youtube.com/watch?v=yIYKR4sgzI8)<br/>\n",
-    "Logistic regression is a binary regression algorithm and it predicts a continuous outcome: the probability of an event. Logistic regression is a type of generalized linear regression model.<br/>\n",
-    "[Support Vector Machine (SVM)](https://www.youtube.com/watch?v=1NxnPkZM9bc)<br/>\n",
-    "A Support Vector Machine (SVM) is a discriminative classifier formally defined by a separating hyperplane. In other words, given labeled training data (supervised learning), the algorithm outputs an optimal hyperplane which categorizes new examples.\n",
-    "\n",
-    "### EEG Models\n",
-    "[Click Here for Super Useful Models!](https://github.com/alexandrebarachant/pyRiemann) <br/>\n",
-    "[Riemannian Geometry](https://www.youtube.com/watch?v=IPrNIjA4AWE)<br/>\n",
-    "Takes into consideration various geometric models to classify data. Think of it as creating a sphere, saddle, or simple plane. <br/>\n",
-    "[Vectorization & Logistic Regression](https://www.youtube.com/watch?v=okpqeEUdEkY)<br/>\n",
-    "Vectorization is the process of rewriting a loop so that instead of processing a single element of an array N times, it processes (say) 4 elements of the array simultaneously N/4 times. <br/>\n",
-    "[Vectorization & Regularized LDA](https://www.youtube.com/watch?v=azXCzI57Yfc)<br/>\n",
-    "LDA allows for ‘fuzzy’ memberships. This provides a more nuanced way of recommending similar items, finding duplicates, or discovering user profiles/personas. In contrast k-means makes hard decision boundaries.\n",
-    "[ERP Covariance & Tangent Space Mapping](https://www.youtube.com/watch?v=tJHC2FVfhjA)<br/>\n",
-    "[ERP Covariance & MDM]()<br/>\n",
-    "A specific type of geometric classifier. <br/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Decoding the N170\n",
+    "## Decoding the N170\n",
     "\n",
     "Next, we will use 4 different machine learning pipelines to classify the P300 based on the data we collected.\n",
     "\n",
